# iudx-MOTION2NX-public

Dataprovider/image_provider/: Reconstruct.cpp
config_files/: example-smpc-remote-config.json
scripts/: remote_server0_split.sh  remote_server1_split.sh
scripts/Non-ServerModel_Architecture/Split/CNN/: remote_server0_split_CNN.sh  remote_server1_split_CNN.sh
scripts/ServerModel_Architecture/HelperNode/: ImageProvider.sh
scripts/ServerModel_Architecture/Split/: ImageProvider.sh
src/examples/: CMakeLists.txt
src/examples/conversion_1/: conversion_1.cpp
src/examples/logistic_regression/: Shares_input.cpp  training_all_labels.cpp
src/examples/millionaires_problem/: 0party0.conf  1party1.conf  CMakeLists.txt  millionaires_problem_constMul.cpp
src/examples/piecewise_linear/: 0party0.conf  1party1.conf  CMakeLists.txt  linear_function.cpp  piecewise_linear_function.cpp
src/motioncore/base/: gate_factory.cpp  gate_factory.h
src/motioncore/protocols/beavy/: beavy_provider.cpp  beavy_provider.h  gate.cpp  gate.h  tensor_op.cpp  wire.h
src/motioncore/utility/: new_fixed_point.h
